Tests/CompilerTests/negative/undefined-symbol.hylo
struct A {}
fun f(x: A.B) { () }
