Tests/CompilerTests/negative/undefined-symbol.expected
negative/undefined-symbol.hylo:2.12-13: error: type 'A' has no member 'B'
fun f(x: A.B) { () }
           ^
